Fixed overflow x

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -46,6 +46,7 @@ svg {
 	width: 100%;
 	height: 100%;
 	overflow-y: scroll;
+	overflow-x: hidden;
 	z-index: 999;
 }
 
